<resources>
    <string name="app_name">腾科商旅</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="title_activity_base">BaseActivity</string>

    <!--bussiness main-->
    <string name="home">首页</string>
    <string name="order_list">订单</string>
    <string name="my_user">我的</string>
    <string name="app_ch_name">腾科商旅</string>

    <string name="hotel">国内酒店</string>
    <string name="air_ticket">国内机票</string>
    <string name="railway_ticket">火车票</string>
    <string name="rent_car">用车</string>

    <string name="search">搜索</string>
    <string name="select_days">住%d晚</string>
    <string name="location_hotel">位置/酒店名</string>

    <string name="select_date">选择时间</string>
    <string name="recommend_sort">推荐排序</string>
    <string name="price_star_sort">价格星级排序</string>
    <string name="more_filter">更多筛选</string>

    <string name="price_asc">价格由低到高</string>
    <string name="price_desc">价格由高到低</string>
    <string name="distance_asc">距离由近到远</string>
    <string name="distance_desc">距离由远到近</string>

    <!--登陆-->
    <string name="user_login">登录</string>
    <string name="user_forgot"><u>忘记密码</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
