<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tengke.android.business.hotels.HotelFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/locationg_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:background="@android:drawable/arrow_up_float" />

        <TextView
            android:id="@+id/city_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_city" />

        <TextView
            android:id="@+id/select_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/city_name_txt"
            android:text="@string/select_date" />

        <RelativeLayout
            android:id="@+id/select_day_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_time">

            <ImageView android:id="@+id/sub_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:background="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/select_days_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_days" />

            <TextView
                android:id="@+id/day_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_below="@id/select_days_txt"
                android:text="@string/select_city" />

            <ImageView android:id="@+id/add_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@android:drawable/ic_delete" />

        </RelativeLayout>

        <TextView
            android:id="@+id/select_hotel_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/select_day_container"
            android:text="@string/location_hotel" />

    </RelativeLayout>

    <Button android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container"
        android:text="@string/search"/>

</RelativeLayout>
