<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/crouton_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/navigation_bar_height" />

        <View
            android:id="@+id/main_ll_bg_view"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:clickable="true"
            android:layout_gravity="bottom"
            android:background="@drawable/tabbar_background" />

        <LinearLayout
            android:id="@+id/main_ll_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:baselineAligned="false"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_btn_nav_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/home"
                android:textColor="@color/color_99ffffff"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/main_btn_nav_order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/order_list"
                android:textColor="@color/color_99ffffff"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/main_btn_nav_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/my_user"
                android:textColor="@color/color_99ffffff"
                android:textSize="10sp" />

        </LinearLayout>

    </FrameLayout>
</merge>
